--- a/mbaas-openshop/src/main/resources/page/register.vm
+++ b/mbaas-openshop/src/main/resources/page/register.vm
@@ -1,6 +1,6 @@
 <div class="register-box">
     <div class="register-logo">
-        <a href="../../index2.html"><b>Admin</b>LTE</a>
+        <a href="../../index2.html"><b>Angkor</b>SHOP</a>
     </div>
 
     <div class="register-box-body">
@@ -8,46 +8,38 @@
 
         <form action="$address/register$!queryString" method="post">
             <div class="form-group has-feedback">
-                <input type="text" class="form-control" value="$!request.getAttribute('fullname')" placeholder="Full name">
+                <input type="text" name="fullname" class="form-control" value="$!formItem.getParameter('fullname')" placeholder="Full name">
                 <span class="glyphicon glyphicon-user form-control-feedback"></span>
             </div>
             <div class="form-group has-feedback">
-                <input type="email" class="form-control" value="$!request.getAttribute('email')" placeholder="Email">
+                <input type="email" name="email" class="form-control" value="$!formItem.getParameter('email')" placeholder="Email">
                 <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
             </div>
             <div class="form-group has-feedback">
-                <input type="password" class="form-control" value="$!request.getAttribute('password')" placeholder="Password">
+                <input type="password" name="password" class="form-control" value="$!formItem.getParameter('password')" placeholder="Password">
                 <span class="glyphicon glyphicon-lock form-control-feedback"></span>
             </div>
             <div class="form-group has-feedback">
-                <input type="password" class="form-control" value="$!request.getAttribute('retypePassword')" placeholder="Retype password">
+                <input type="password" name="retypePassword" class="form-control" value="$!formItem.getParameter('retypePassword')" placeholder="Retype password">
                 <span class="glyphicon glyphicon-log-in form-control-feedback"></span>
             </div>
             <div class="row">
                 <div class="col-xs-8">
                     <div class="checkbox icheck">
                         <label>
-                            <input type="checkbox" name="agreement" $!request.getAttribute('agreement')> I agree to the <a href="#">terms</a>
+                            <input type="checkbox" name="agreement" #if($formItem.getParameter('agreement')) checked="checked" #end> I agree to the <a href="#">terms</a>
                         </label>
                     </div>
                 </div>
                 <!-- /.col -->
                 <div class="col-xs-4">
-                    <button type="submit" class="btn btn-primary btn-block btn-flat">Register</button>
+                    <button type="submit" name="buttonRegister" value="register" class="btn btn-primary btn-block btn-flat">Register</button>
                 </div>
                 <!-- /.col -->
             </div>
         </form>
 
-        <div class="social-auth-links text-center">
-            <p>- OR -</p>
-            <a href="#" class="btn btn-block btn-social btn-facebook btn-flat"><i class="fa fa-facebook"></i> Sign up using
-                Facebook</a>
-            <a href="#" class="btn btn-block btn-social btn-google btn-flat"><i class="fa fa-google-plus"></i> Sign up using
-                Google+</a>
-        </div>
-
-        <a href="login.html" class="text-center">I already have a membership</a>
+        <a href="$address/login" class="text-center">I already have a membership</a>
     </div>
     <!-- /.form-box -->
 </div>
