--- a/mbaas-openshop/src/main/resources/page/register.vm
+++ b/mbaas-openshop/src/main/resources/page/register.vm
@@ -10,18 +10,22 @@
             <div class="form-group has-feedback">
                 <input type="text" name="fullname" class="form-control" value="$!formItem.getParameter('fullname')" placeholder="Full name">
                 <span class="glyphicon glyphicon-user form-control-feedback"></span>
+                $!formItem.getError('fullname')
             </div>
             <div class="form-group has-feedback">
                 <input type="email" name="email" class="form-control" value="$!formItem.getParameter('email')" placeholder="Email">
                 <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+                $!formItem.getError('email')
             </div>
             <div class="form-group has-feedback">
                 <input type="password" name="password" class="form-control" value="$!formItem.getParameter('password')" placeholder="Password">
                 <span class="glyphicon glyphicon-lock form-control-feedback"></span>
+                $!formItem.getError('password')
             </div>
             <div class="form-group has-feedback">
                 <input type="password" name="retypePassword" class="form-control" value="$!formItem.getParameter('retypePassword')" placeholder="Retype password">
                 <span class="glyphicon glyphicon-log-in form-control-feedback"></span>
+                $!formItem.getError('retypePassword')
             </div>
             <div class="row">
                 <div class="col-xs-8">
