--- a/mbaas-openshop/src/main/resources/page/login.vm
+++ b/mbaas-openshop/src/main/resources/page/login.vm
@@ -1,1 +1,41 @@
-login page
+<div class="login-box">
+    <div class="login-logo">
+        <a href="$address"><b>Shop</b>KH</a>
+    </div>
+    <!-- /.login-logo -->
+    <div class="login-box-body">
+        <p class="login-box-msg">Sign in to start your session</p>
+
+        <form action="$address/login" method="post">
+            <div class="form-group has-feedback #if($formItem.hasError("login")) has-error #end">
+                <input name="login" type="email" class="form-control" placeholder="Email" value="$!formItem.getParameter('login')">
+                <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+                #if($formItem.hasError('login'))
+                    <span class="help-block">$formItem.getError('login')</span>
+                #end
+            </div>
+            <div class="form-group has-feedback #if($formItem.hasError('password')) has-error #end">
+                <input name="password" type="password" class="form-control" placeholder="Password">
+                <span class="glyphicon glyphicon-lock form-control-feedback"></span>
+                #if($formItem.hasError('password'))
+                    <span class="help-block">$formItem.getError('password')</span>
+                #end
+            </div>
+            <div class="row">
+                <div class="col-xs-8">
+                </div>
+                <!-- /.col -->
+                <div class="col-xs-4">
+                    <button name="buttonLogin" type="submit" class="btn btn-primary btn-block btn-flat">Login</button>
+                </div>
+                <!-- /.col -->
+            </div>
+        </form>
+        <!-- /.social-auth-links -->
+
+        <a href="$address/register" class="text-center">Register a new membership</a>
+
+    </div>
+    <!-- /.login-box-body -->
+</div>
+<!-- /.login-box -->
