--- a/mbaas-openshop/src/main/resources/page/register.vm
+++ b/mbaas-openshop/src/main/resources/page/register.vm
@@ -1,16 +1,18 @@
 <div class="register-box">
     <div class="register-logo">
-        <a href="../../index2.html"><b>Angkor</b>SHOP</a>
+        <a href="$address"><b>Shop</b>KH</a>
     </div>
 
     <div class="register-box-body">
         <p class="login-box-msg">Register a new membership</p>
 
         <form action="$address/register$!queryString" method="post">
-            <div class="form-group has-feedback">
+            <div class="form-group has-feedback #if($formItem.hasError('fullname')) has-error #end">
                 <input type="text" name="fullname" class="form-control" value="$!formItem.getParameter('fullname')" placeholder="Full name">
                 <span class="glyphicon glyphicon-user form-control-feedback"></span>
-                $!formItem.getError('fullname')
+                #if($formItem.hasError('fullname'))
+                    <span class="help-block">$formItem.getError('fullname')</span>
+                #end
             </div>
             <div class="form-group has-feedback">
                 <input type="email" name="email" class="form-control" value="$!formItem.getParameter('email')" placeholder="Email">
